--- a/WEB/src/components/Box/box.css
+++ b/WEB/src/components/Box/box.css
@@ -206,11 +206,12 @@
     .sect-1{
     position: relative;
     width: 100%;
-    height: 1190px;
+    height: 770px;
     box-sizing: border-box;
 }
 .slide img{
-    width: 1920px;
+    width: 400px;
+    height: 300px;
 }
 .container{
     position: relative;
@@ -236,34 +237,34 @@
         left: 0%;
     }
     24%{
-        left: -1920px;
+        left: -768px;
     }
     42%{
-        left: -1920px;
+        left: -768px;
     }
     46%{
-        left: calc(-1920*2px);
+        left: calc(-768px*2px);
     }
     62%{
-        left: calc(-1920*2px);
+        left: calc(-768px*2px);
     }
     66%{
-        left: calc(-1920*3px);
+        left: calc(-768px*3px);
     }
     82%{
-        left: calc(-1920*3px);
+        left: calc(-768px*3px);
     }
     86%{
-        left: calc(-1920*4px);
+        left: calc(-768px*4px);
     }
     100%{
-        left: calc(-1920*4px);
+        left: calc(-768px*4px);
     }
 }
 .container-1{
     position: absolute;
     z-index: 1;
-    top: 340px;
+    top: 90px;
     left: 0;
     width: 100%;
     padding: 20px;
@@ -274,7 +275,7 @@
 }
 .container-1 div:first-child{
     font-size: 24px;
-    padding: 12px 0;
+    padding: 1px 0;
 }
 .product{
     width: 100%;
@@ -287,14 +288,15 @@
 
 .product .box{
     width: 130px;
-    height: 250px;
+    height: 290px;
     background-color: white;
+    margin: 5px;
 }
 .box h3{
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 30px;
-    margin-bottom: 10px;
+    margin-top: 13px;
+    margin-left: 10px;
+    font-size: 15px;
+    margin-bottom: 13px;
     color: rgb(43,42,42);
 }
 
@@ -307,10 +309,11 @@
     background-color: white;
 }
 .box div img{
-    width: 60px;
-    height: 50px;
+    width: 50px;
+    height: 40px;
     cursor: pointer;
-    margin-right: 45px;
+    margin-right: 15px;
+
 }
 .box-1 div{
     display: inline-block;
@@ -325,9 +328,9 @@
     cursor: pointer;
 }
 .box .box-2 img{
-    margin: 0 35px;
-    width: 300px;
-    height: 130px;
+    margin: 0 11px;
+    width: 62px;
+    height: 205px;
     cursor: pointer;
 }
 .sect-2{
@@ -346,8 +349,9 @@
     background-color: white;
     position: relative;
 }
+
 .slide-2 h3{
-    font-size: 20px;
+    font-size: 15px;
     padding-bottom: 5px;
 }
 .product-slide{
@@ -371,12 +375,16 @@
     margin-bottom: 15px;
     cursor: pointer;
 }
+.product-slide img{
+    width: 150px;
+    height: 100px;
+}
 .L-btn, .btn-R{
     background-color: rgb(255, 255, 255,1);
-    height: 90px;
-    width: 50px;
+    height: 60px;
+    width: 40px;
     text-align: center;
-    top: 35%;
+    top: 40%;
     position: absolute;
     border: 3px solid transparent;
     cursor: pointer;
