--- a/ListApp/src/Components/TaskList/TasksList.css
+++ b/ListApp/src/Components/TaskList/TasksList.css
@@ -4,5 +4,21 @@
     justify-content: center;
     flex-direction: row;
     padding-right: 10%;
-    list-style-type: none
+    list-style-type: none;
+    background-color: rgb(72, 72, 72);
+    width: 500px;
+    margin-left: 20%;
+    border: white solid 1px;
+    padding: 10px;
+}
+.checkbox{
+    margin-right: 10%;
+}
+.task-list{
+    margin-right: 10%;
+}
+.checkbox-title{
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
